# tgbot

./: .envrc  .pre-commit-congif.yaml  docker-compose.yaml  pyproject.toml
src/tgbot/application/postgres/: __init__.py  config.py  connection.py
src/tgbot/application/postgres/gateways/: __init__.py  metadata.py  sponsor.py  subscribe.py  task.py  user.py  user_task.py
src/tgbot/application/postgres/migrations/: env.py
src/tgbot/application/postgres/migrations/versions/: 1ceb17881cca_initial.py  21b36758e53c_fix_manual.py  2b8f30046b53_changed_name.py  31de1d8bbc0d_fix.py  47559e01b61b_user_table.py  (+12 more)
src/tgbot/application/postgres/models/: __init__.py  metadata.py  promocode.py  sponsor.py  subscription.py  task.py  user.py  user_task.py  withdrawal.py
src/tgbot/infrastructure/: __init__.py  container.py
src/tgbot/presentation/: keyboards.py  main.py  main_start.py  shit.py
src/tgbot/presentation/routers/: gain_stars.py  main.py  profile.py  rating.py  start.py  tasks.py  withdraw.py
src/tgbot/presentation/v1/: shit.py
src/tgbot/presentation/v1/routers/: __init__.py  gain_stars.py  main.py  profile.py  rating.py  start.py  tasks.py  withdraw.py
src/tgbot/presentation/v2/: subscribe_check.py
src/tgbot/presentation/v2/keyboards/: __init__.py  boost.py  faq.py  farm_stars.py  get_link.py  main.py  mini_games.py  profile.py  rating.py  reviews.py  start.py  tasks.py
src/tgbot/presentation/v2/routers/: __init__.py  boost.py  faq.py  farm_stars.py  get_link.py  main.py  mini_games.py  profile.py  rating.py  reviews.py  start.py  tasks.py
